WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223908
Web Inspector: CSS Grid overlay track sizes are incorrect when inline styles are applied to the element
https://bugs.webkit.org/show_bug.cgi?id=223908
Summary
Web Inspector: CSS Grid overlay track sizes are incorrect when inline styles ...
Patrick Angle
Reported
2021-03-29 18:31:58 PDT
For elements that have inline style attributes, those column and row sizes should be shown as the authored values. Instead, we currently show the most specific CSS rule's values that apply instead.
Attachments
Patch v1.0
(3.08 KB, patch)
2021-03-29 18:41 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-29 18:32:16 PDT
<
rdar://problem/75983927
>
Patrick Angle
Comment 2
2021-03-29 18:41:38 PDT
Created
attachment 424608
[details]
Patch v1.0
Blaze Burg
Comment 3
2021-03-30 14:33:58 PDT
Comment on
attachment 424608
[details]
Patch v1.0 r=me
EWS
Comment 4
2021-03-31 10:49:12 PDT
Committed
r275293
: <
https://commits.webkit.org/r275293
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424608
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug