Web Inspector: CSS Grid overlay track sizes are incorrect when inline styles are applied to the element https://bugs.webkit.org/show_bug.cgi?id=223908

Reviewed by BJ Burg.

Add checking the inline style attributes on an element when collecting authored track sizes for grid overlays.

* inspector/InspectorOverlay.cpp:
(WebCore::authoredGridTrackSizes):


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275293 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235974@main